# state-centric-gen-planning

./: .gitignore  0_debug.slurm  0_plansformer.slurm  1_data_pipeline.slurm  2_graph_embed.slurm  2_train_eval.slurm  3_aggregate.slurm  3_train_eval.slurm  4_debug.slurm  README.md  data_gen.slurm  embeddings.sh  graph_embed.sh  graph_embed.slurm  main.py  pyproject.toml  requirements.txt  train_eval.sh  train_eval.slurm
checkpoints/: blocks_lstm_best.pt  blocks_lstm_last.pt  blocks_training_log.csv  gripper_lstm_best.pt  gripper_lstm_last.pt  gripper_training_log.csv  logistics_lstm_best.pt  logistics_lstm_last.pt  logistics_training_log.csv  visitall-from-everywhere_lstm_best.pt  visitall-from-everywhere_lstm_last.pt  visitall-from-everywhere_training_log.csv
code/: README.md
data/: README.md  parse-pddl-metadata.py
results/: aggregated.csv  blocks_delta_test-extrapolation_results.json  blocks_delta_test-interpolation_results.json  blocks_delta_validation_results.json  blocks_state_validation_results.json  blocks_test-extrapolation_results.json  blocks_test-interpolation_results.json  gripper_delta_test-extrapolation_results.json  gripper_delta_test-interpolation_results.json  gripper_delta_validation_results.json  gripper_state_test-extrapolation_results.json  gripper_state_test-interpolation_results.json  gripper_state_validation_results.json  gripper_test-extrapolation_results.json  gripper_test-interpolation_results.json  logistics_delta_test-extrapolation_results.json  logistics_delta_test-interpolation_results.json  logistics_delta_validation_results.json  logistics_state_test-extrapolation_results.json  logistics_state_test-interpolation_results.json  logistics_state_validation_results.json  logistics_test-extrapolation_results.json  logistics_test-interpolation_results.json  (+8 more)
(+3541 files in other folders)
