[project]
name = "state-centric-plan"
version = "0.1.0"
description = "State-Centric Learning for Plan Generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pddl>=0.4.1",
    "pddlpy>=0.4.4",
    "pyperplan>=2.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "wlplan",
]

[tool.uv.workspace]
members = [
    "code/plansformer",
]

[tool.uv.sources]
wlplan = { git = "https://github.com/g-nitin/wlplan.git" }

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
